--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "firebase": "^10.14.1",
     "vue": "^3.5.3",
     "vue-router": "^4.4.3"
   },
