--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "firebase": "^10.14.1",
+    "tailwind-merge": "^2.5.4",
     "vue": "^3.5.3",
     "vue-router": "^4.4.3"
   },
